--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,4 +6,4 @@
 # Optional: add API keys here if you use a paid news API in the future
 
 # CORS — set this to your Vercel frontend URL in production
-# ALLOWED_ORIGIN=https://bear-bull-predection1.vercel.app/
+ALLOWED_ORIGIN=https://bear-bull-predection1.vercel.app/
