--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,14 @@
-fastapi==0.109.2
-uvicorn[standard]==0.27.1
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
 yfinance>=0.2.36
 numpy>=1.26.0
 pandas>=2.0.0
 scikit-learn>=1.3.0
 lightgbm>=4.0.0
+xgboost>=2.0.0
 websockets>=12.0
 python-dotenv>=1.0.0
 pytz>=2024.1
 requests>=2.31.0
 joblib>=1.3.0
+shap>=0.44.0
