--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,12 @@
 # Backend Environment Variables
-# Copy this to backend/.env for local development
-# On Railway: set these in the Railway dashboard under Environment Variables
+# ─────────────────────────────────────────────────────────────
+# Copy this file to backend/.env for local development.
+# On Render: set these in the Render dashboard → Environment.
 
-# No secrets needed for basic mode (Binance public API + yfinance are free/public)
-# Optional: add API keys here if you use a paid news API in the future
+# ── Supabase PostgreSQL connection ────────────────────────────
+# Get this from: Supabase dashboard → Project Settings → Database → Connection String → URI
+# Note: URL-encode any special characters in the password (@ → %40)
+DATABASE_URL=postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT.supabase.co:5432/postgres
 
-# CORS — set this to your Vercel frontend URL in production
-ALLOWED_ORIGIN=https://bear-bull-predection1.vercel.app/
+# ── CORS ──────────────────────────────────────────────────────
+ALLOWED_ORIGIN=http://localhost:3000
